Fix election page css (#508)
* Fix election candidate overflowing texte
* Fix "Show Less" invisible still occurring in production (wtf)
* Fix program text still overflowing still occurring in production (wtf)

Bonus:
* Fix miss-aligned links in navbar

--- a/core/static/election/election.scss
+++ b/core/static/election/election.scss
@@ -199,6 +199,7 @@ $min_col_width: 100px;
                             align-items: center;
                             gap: $gap;
                             padding: 10px;
+                            max-width: 100%;
 
                             >img {
                                 max-width: 100% !important;
